--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/PasswordChangeWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/PasswordChangeWindow.xaml
@@ -7,13 +7,15 @@
         mc:Ignorable="d"
         Title="Promena lozinke" Height="505" Width="490" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <!--<Window.Resources>
-        --><!--<Style x:Key="FocusTextBox" TargetType="Grid">
+        -->
+    <!--<Style x:Key="FocusTextBox" TargetType="Grid">
             <Style.Triggers>
                 <DataTrigger Binding="{Binding ElementName=textBoxIme, Path=IsVisible}" Value="True">
                     <Setter Property="FocusManager.FocusedElement" Value="{Binding ElementName=textBoxPrezime}"/>
                 </DataTrigger>
             </Style.Triggers>
-        </Style>--><!--
+        </Style>-->
+    <!--
     </Window.Resources>-->
 
     <Grid x:Name="PasswordGrid" Background="Black" Margin="0,0,0,-1" >
@@ -25,11 +27,11 @@
                 <KeyBinding Command="{Binding ChangePasswordCommand}" Key="Enter"/>
             </PasswordBox.InputBindings>-->
         </PasswordBox>
-        
+
 
 
         <Label Content="Potvrdite novu lozinku:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="113,218,0,0" VerticalAlignment="Top" Width="244" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="20" />
-        <PasswordBox x:Name="PotvrdaLozinke"   HorizontalAlignment="Left" Background="#FF2E2E2E" BorderThickness="1" BorderBrush="#FF282829" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="34" Width="243" Foreground="#FFFBFB9F" Margin="114,261,0,169">
+        <PasswordBox x:Name="PotvrdaLozinke" FontSize="20"  HorizontalAlignment="Left" Background="#FF2E2E2E" BorderThickness="1" BorderBrush="#FF282829" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Width="243" Foreground="#FFFBFB9F" Margin="114,268,0,165">
             <!--<PasswordBox.InputBindings>
                 <KeyBinding Command="{Binding ChangePasswordCommand}" Key="Enter"/>
             </PasswordBox.InputBindings>-->
