--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/AddKontrolniWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/AddKontrolniWindow.xaml
@@ -34,7 +34,7 @@
         <DatePicker SelectedDate="{Binding NoviKontrolni.datum_odrzavanja}" Margin="55,255,41,402"></DatePicker>
         <!--<DatePicker SelectedDate="{Binding NoviDomaci.dan_predaje}" Margin="55,356,41,289"></DatePicker>-->
         <Label  Content="Zadatak:" HorizontalAlignment="Left" Height="40" Margin="170,123,0,0" VerticalAlignment="Top" Width="227" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="22" HorizontalContentAlignment="Center"/>
-        <Label  Content="Datum odrzavanja:" HorizontalAlignment="Left" Height="42" Margin="170,217,0,0" VerticalAlignment="Top" Width="227" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="22" HorizontalContentAlignment="Center"/>
+        <Label  Content="Datum održavanja:" HorizontalAlignment="Left" Height="42" Margin="170,217,0,0" VerticalAlignment="Top" Width="227" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="22" HorizontalContentAlignment="Center"/>
         <!--<Label  Content="Dan predaje:" HorizontalAlignment="Left" Height="36" Margin="170,315,0,0" VerticalAlignment="Top" Width="227" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="22" HorizontalContentAlignment="Center"/>-->
         <Button Content="{Binding ButtonContent}"  Command="{Binding AddKontrolniCommand}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="221" Margin="176,582,0,0" Height="63" FontFamily="Segoe UI" Foreground="#FFFBFB9F" Background="Transparent" BorderBrush="White" FontSize="36" FontWeight="Bold"/>
         <Label  Content="{Binding ErrorZadatak}" HorizontalAlignment="Left" Height="29" Margin="55,194,0,0" VerticalAlignment="Top" Width="464" FontFamily="Segoe UI" Foreground="red" FontSize="14"/>
@@ -65,7 +65,7 @@
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
 
-                <DataGridTextColumn Header="Razred" TextBlock.TextAlignment="Center" Binding="{Binding broj_oblasti}" IsReadOnly="True">
+                <DataGridTextColumn Header="Broj oblasti" TextBlock.TextAlignment="Center" Binding="{Binding broj_oblasti}" IsReadOnly="True">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="TextBlock">
                             <Setter Property="TextWrapping" Value="Wrap" />
@@ -95,7 +95,7 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Button  Content="Obrisi" Visibility="{Binding DeletionEnabled}" IsDefault="True" Command="{Binding DeleteKontrolniCommand}" HorizontalAlignment="Left"  FontSize="24" VerticalAlignment="Top" Width="221" Margin="176,534,0,0" Height="48" RenderTransformOrigin="0.769,0.381"  FontFamily="Segoe UI" Background="Transparent" BorderBrush="White" Foreground="#FFFBFB9F" FontWeight="Bold"/>
+        <Button  Content="Obriši" Visibility="{Binding DeletionEnabled}" IsDefault="True" Command="{Binding DeleteKontrolniCommand}" HorizontalAlignment="Left"  FontSize="24" VerticalAlignment="Top" Width="221" Margin="176,534,0,0" Height="48" RenderTransformOrigin="0.769,0.381"  FontFamily="Segoe UI" Background="Transparent" BorderBrush="White" Foreground="#FFFBFB9F" FontWeight="Bold"/>
 
     </Grid>
 </Window>
