--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/AddOblastWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/AddOblastWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OsnovnaSkolaUI.Views"
         mc:Ignorable="d"
-       Title="Dodaj odeljenje" Height="404.281" Width="490" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+       Title="Dodaj oblast" Height="404.281" Width="490" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style x:Key="FocusTextBox" TargetType="Grid">
             <Style.Triggers>
