--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/AddRazredniWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/AddRazredniWindow.xaml
@@ -9,7 +9,7 @@
     <Grid Background="Black">
         <DataGrid  ItemsSource="{Binding Zaposleni, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" SelectedItem="{Binding SelectedZaposleni}" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True" Margin="0,0,0,97">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Id" TextBlock.TextAlignment="Center" Binding="{Binding Id_zaposlenog}" IsReadOnly="True">
+                <!--<DataGridTextColumn Header="Id" TextBlock.TextAlignment="Center" Binding="{Binding Id_zaposlenog}" IsReadOnly="True">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="TextBlock">
                             <Setter Property="TextWrapping" Value="Wrap" />
@@ -17,7 +17,7 @@
                             <Setter Property="VerticalAlignment" Value="Center" />
                         </Style>
                     </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
+                </DataGridTextColumn>-->
 
                 <DataGridTextColumn Header="Ime" TextBlock.TextAlignment="Center" Binding="{Binding ime}" IsReadOnly="True">
                     <DataGridTextColumn.ElementStyle>
