--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/AddCasWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/AddCasWindow.xaml
@@ -30,7 +30,7 @@
 
         <DataGrid ItemsSource="{Binding Odeljenja, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Visibility="{Binding Modification}"  HorizontalAlignment="Left" Height="194" Margin="21,321,0,0" VerticalAlignment="Top" Width="750" SelectedItem="{Binding SelectedOdeljenje}" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Id" TextBlock.TextAlignment="Center" Binding="{Binding Id_odeljenja}" IsReadOnly="True">
+                <!--<DataGridTextColumn Header="Id" TextBlock.TextAlignment="Center" Binding="{Binding Id_odeljenja}" IsReadOnly="True">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="TextBlock">
                             <Setter Property="TextWrapping" Value="Wrap" />
@@ -38,7 +38,7 @@
                             <Setter Property="VerticalAlignment" Value="Center" />
                         </Style>
                     </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
+                </DataGridTextColumn>-->
 
                 <DataGridTextColumn Header="Razred" TextBlock.TextAlignment="Center" Binding="{Binding razred}" IsReadOnly="True">
                     <DataGridTextColumn.ElementStyle>
